force-app/main/default/objects/Portal_Users__c/fields/Google_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Google_Access_Token__c</fullName>
    <label>Google Access Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>