force-app/main/default/objects/Portal_Users__c/fields/Google_Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>Google_Auth_Code__c</fullName>
    <label>Google Auth Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>