force-app/main/default/objects/Portal_Users__c/fields/Google_Auth_State__c.field-meta.xml
<CustomField>
    <fullName>Google_Auth_State__c</fullName>
    <label>Google Auth State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>