force-app/main/default/objects/Portal_Users__c/fields/Google_Auth_State_Expiry_At__c.field-meta.xml
<CustomField>
    <fullName>Google_Auth_State_Expiry_At__c</fullName>
    <label>Google Auth State Expiry At</label>
    <type>DateTime</type>
</CustomField>