force-app/main/default/objects/Portal_Users__c/fields/Google_Picture_Url__c.field-meta.xml
<CustomField>
    <fullName>Google_Picture_Url__c</fullName>
    <label>Google Picture Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>