force-app/main/default/objects/Portal_Users__c/fields/Resolved_Profile_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Profile_Image_URL__c</fullName>
    <formula>IF(Use_No_Profile_Picture__c, NULL, IF(NOT(ISBLANK(Photo_Url__c)), Photo_Url__c, Google_Picture_Url__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolved Profile Image URL</label>
    <type>Text</type>
</CustomField>