force-app/main/default/objects/Portal_Users__c/fields/Use_No_Profile_Picture__c.field-meta.xml
<CustomField>
    <fullName>Use_No_Profile_Picture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Profile Picture</label>
    <type>Checkbox</type>
</CustomField>