force-app/main/default/objects/Portal_Users__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Access_Features__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>TLG_Collapsed_Columns__c</columns>
    <columns>Date_of_Joining__c</columns>
    <columns>Designation__c</columns>
    <columns>Email__c</columns>
    <columns>Is_Active__c</columns>
    <columns>One_Time_Password__c</columns>
    <columns>One_Time_Password_Type__c</columns>
    <columns>Reports_To__c</columns>
    <columns>Role__c</columns>
    <columns>User__c</columns>
    <columns>User_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>